fix multi-selection button layout problems
git-svn-id: svn://svn.newznab.com/nn/trunk@306 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/www/style.css
+++ b/www/style.css
@@ -109,7 +109,7 @@ div.error { padding:20px; padding-left:50px; border:1px solid #BBB; background: 
 div.comments { padding-top:20px; }
 
 input.nzb_check_all { margin-left:5px; }
-div.nzb_multi_operations { color:#888; display:inline; float:right; }
+div.nzb_multi_operations { color:#888; display:inline; float:right; width:330px; }
 div.nzb_multi_operations input { color:#888; background-color:#fff; border:1px solid #ddd; }
 div.nzb_multi_operations input:hover { color:#000; border:1px solid #000; cursor:pointer; }
 
